--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    <activity android:name="thinkwee.buptroom.SettingActivity">
+    </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
