Add All Annotation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,12 @@
             </intent-filter>
         </activity>
 
+        <service android:name="thinkwee.buptroom.ShakeService"
+            android:exported="false"> </service>
+
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+
 
 </manifest>
