--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "thinkwee.buptroom"
         minSdkVersion 21
         targetSdkVersion 24
-        versionCode 12
-        versionName "1.2.5"
+        versionCode 15
+        versionName "1.2.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'cn.hugeterry.updatefun:updatefun:1.8.6'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     testCompile 'junit:junit:4.12'
 }
