--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "thinkwee.buptroom"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 20
-        versionName "1.2.9"
+        versionCode 22
+        versionName "1.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'cn.hugeterry.updatefun:updatefun:1.8.6'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     testCompile 'junit:junit:4.12'
 }
