--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "thinkwee.buptroom"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 22
-        versionName "1.3.0"
+        versionCode 23
+        versionName "1.3.0 hotfix"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
