--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/launcher"
+        android:icon="@drawable/logoko"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
